Fix the filter input and button not wrap, by making the input shorter. There is probably a more boostrappy solution though, but this is ok now.

--- a/src/fastbreak/fastbreak/static/fastbreak.css
+++ b/src/fastbreak/fastbreak/static/fastbreak.css
@@ -17,7 +17,7 @@
 }
 
 #fb-text-filter {
-    width: 10em;
+    width: 100px;
 }
 .fb-cheatsheet-row {
     margin-bottom: 0.2em;
